MVC-controllers and views implemented (withotu entities connections)

--- a/AspDemo.Web/AspDemo.Web/Views/Home/Index.cshtml
+++ b/AspDemo.Web/AspDemo.Web/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        <input type="button" value="Учредители" onclick="@("window.location.href='" + @Url.Action("Index", "Founders") + "'");" />
+        <input type="button" value="Компании" onclick="@("window.location.href='" + @Url.Action("Index", "Companies") + "'");" />
+
+    </div>
+
