- The simplest frontend-validation added - Misprints on frontend corrected

--- a/AspDemo.Web/AspDemo.Web/Views/Founders/Edit.cshtml
+++ b/AspDemo.Web/AspDemo.Web/Views/Founders/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Редактор учредителя";
 }
 
-<h4>Релактировать учредителя</h4>
+<h4>Редактировать учредителя</h4>
 <hr />
 
 <div class="col-11">
