- Full validation on MVC frontend added

--- a/AspDemo.Web/AspDemo.Web/Views/Companies/Index.cshtml
+++ b/AspDemo.Web/AspDemo.Web/Views/Companies/Index.cshtml
@@ -16,7 +16,7 @@
         @foreach (AspDemo.DomainModel.common.model.ListItemModel item in Model)
         {
             <li>
-                <a href="/Companies/Edit/@item.Id">@item.Value</a>
+                <a href="/Companies/Open/@item.Id">@item.Value</a>
             </li>
         }
     </ul>
