--- a/AspDemo.Web/AspDemo.Web/Views/Founders/Index.cshtml
+++ b/AspDemo.Web/AspDemo.Web/Views/Founders/Index.cshtml
@@ -14,7 +14,7 @@
         @foreach (AspDemo.DomainModel.common.model.ListItemModel item in Model)
         {
             <li>
-                <a href="/Founders/Edit/@item.Id">@item.Value</a>
+                <a href="/Founders/Open/@item.Id">@item.Value</a>
             </li>
         }
     </lu>
