--- a/AspDemo.Web/AspDemo.Web/Views/Companies/Edit.cshtml
+++ b/AspDemo.Web/AspDemo.Web/Views/Companies/Edit.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Update">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label font-weight-bold">Название</label>
