--- a/AspDemo.Web/AspDemo.Web/Views/Founders/Edit.cshtml
+++ b/AspDemo.Web/AspDemo.Web/Views/Founders/Edit.cshtml
@@ -9,7 +9,7 @@
 
 <div class="col-11">
     <div class="col-md-4">
-        <form asp-action="Update">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Tin" class="control-label font-weight-bold">ИНН</label>
